fix: rename project change scrollbar

--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -2,8 +2,8 @@
     background-color: #222222; 
   }
   
+  /* HEADER */
   header {
-    /* background: linear-gradient(to right, #ee9746, #f5bb87); */
     background: linear-gradient(to right, rgba(118, 74, 241, 1), rgba(118, 74, 241, .5));
     margin-bottom: 20px;
   }
@@ -24,50 +24,8 @@
     margin-right: 2rem;
   }
   
-  /* header form {
-    display: flex;
-  }
 
-  header .navBar{
-    height: 40px;
-  } */
-  
-  /* header .navBar input{
-    height: 36.5px;
-    width: 19rem;
-    padding: 6px 12px;
-    font-size: .9375rem;
-    border-radius: 4px 0px 0px 4px;
-    border:1px solid #222;
-    border-right: 0px;
-    outline: none;
-  }
-  
-  header .navBar input:focus, header .navBar input:hover{
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, .5);
-  }
-  
-  header .navBar button{
-    height: 36.5px;
-    padding: 6px 12px;
-    margin-right: 15px;
-    font-size: .9375rem;
-    background-color: #444;
-    color: #fff;
-    border:0px solid #222;
-    border-radius: 0px 4px 4px 0px;
-    border-left: 0px;
-  
-    font-weight: 800;
-    cursor: pointer;
-    transition: filter 0.2s;
-  }
-  
-  header .navBar button:hover{
-    filter: brightness(0.9) ;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, .5);
-  } */
-    
+  /* MAIN */
   main{
     max-width: 1500px;
     margin: 0 auto;
@@ -75,10 +33,9 @@
     padding: 5px 15px;
   }
   
-    
+
+    /* FOOTER */
   .layout-bottom{
-    /* display: flex; */
-    /* width:100%; */
     min-height: 200px;
     background-color: #464548;
     padding: 15px;
@@ -113,61 +70,22 @@
     filter: brightness(0.7);    
   }
 
-  /* .bottom-links{
-    display: flex;
-    flex-direction: column;
-    margin-right: 150px;
-  } */
 
-  /* ul {
-    list-style: none;
-  } */
-
-  /* .bottom-links ul li{
-    margin-bottom: 5px;
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+ 
+  ::-webkit-scrollbar-thumb {
+    background-color: #303030; 
+    border-radius: 20px;     
   }
 
-  .bottom-links ul li a{
-    font-size: 20px;
-    text-decoration: none;
-    color: #fff;
-    margin-bottom: 5px;
+  *::-webkit-scrollbar-track {
+    background: #222222;
   }
-
-  .bottom-links ul li a:hover{
-    text-decoration: underline;
-  } */
-
 
   @media (max-width: 1200px){
-    /* header {
-      background:  #ee9746;
-    } */
-
-    /* header img{
-     content: url('https://assets1.mtggoldfish.com/assets/mtggoldfish-mobile-nav-icon-d820c9153a006c980d7b1cfd038543fe2d6987ea60e58c72af950e42f7446cab.png');
-     width: 35px;
-     height: 35px;
-     margin-left: 3.5px;
-     margin-right: 0;
-    } */
-  
-    /* header .navBar {
-      width: 100%;
-    }
-     */
-    /* header .navBar form{
-      margin: 0 1rem;
-      width: 100%;
-    } */
-
-    /* header .navBar input{
-      width: 100%;
-    }
-
-    header .navBar button{
-      margin-right: 0;
-    } */
+    
   }
   
   @media (max-width: 767px){
